WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
139290
Fix build warning in WebCore/platform/graphics module
https://bugs.webkit.org/show_bug.cgi?id=139290
Summary
Fix build warning in WebCore/platform/graphics module
Shivakumar J M
Reported
2014-12-04 22:03:31 PST
fix build warning in: [3342/5071] Building CXX object Source/WebCore/CMakeFiles/WebCore.dir/__/__/DerivedSources/WebCore/JSRTCDataChannelEvent.cpp.o ../../Source/WebCore/platform/graphics/freetype/FontCacheFreeType.cpp:115:15: warning: unused parameter ‘fontDescription’ [-Wunused-parameter] static String getFamilyNameStringFromFontDescriptionAndFamily(const FontDescription& fontDescription, const AtomicString& family) ^
Attachments
Patch
(1.56 KB, patch)
2014-12-04 22:07 PST
,
Shivakumar J M
cgarcia
: review-
cgarcia
: commit-queue-
Details
Formatted Diff
Diff
Patch-Updated-Review1
(2.11 KB, patch)
2014-12-05 01:05 PST
,
Shivakumar J M
no flags
Details
Formatted Diff
Diff
Show Obsolete
(1)
View All
Add attachment
proposed patch, testcase, etc.
Shivakumar J M
Comment 1
2014-12-04 22:07:46 PST
Created
attachment 242617
[details]
Patch Fix a build warning by removing parameter name from function.
Shivakumar J M
Comment 2
2014-12-04 22:16:42 PST
Might be caused by patch from bug:
https://bugs.webkit.org/show_bug.cgi?id=139207
Carlos Garcia Campos
Comment 3
2014-12-04 23:26:21 PST
Comment on
attachment 242617
[details]
Patch getFamilyNameStringFromFontDescriptionAndFamily() is a private function, we should change it instead. If the font description is no longer used, the name is not true. So, I think it would be better to rename the function as something like getFamilyNameStringFromFamily() and remove the FontDescription parameter.
Shivakumar J M
Comment 4
2014-12-05 01:05:29 PST
Created
attachment 242623
[details]
Patch-Updated-Review1 updated the patch as per comments
WebKit Commit Bot
Comment 5
2014-12-05 02:29:03 PST
Comment on
attachment 242623
[details]
Patch-Updated-Review1 Clearing flags on attachment: 242623 Committed
r176840
: <
http://trac.webkit.org/changeset/176840
>
WebKit Commit Bot
Comment 6
2014-12-05 02:29:09 PST
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug