Fix build warning in WebCore/platform/graphics module https://bugs.webkit.org/show_bug.cgi?id=139290

Patch by Shivakumar JM <shiva.jm@samsung.com> on 2014-12-05
Reviewed by Carlos Garcia Campos.

Fix a build warning by removing parameter name from function.

No new tests, no behavior change.

* platform/graphics/freetype/FontCacheFreeType.cpp:
(WebCore::getFamilyNameStringFromFontDescriptionAndFamily):

Canonical link: https://commits.webkit.org/157145@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@176840 268f45cc-cd09-0410-ab3c-d52691b4dbfc